# fast-torch-serving-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
.claude/skills/arch-audit/: SKILL.md
.claude/skills/code-documentation-guideline/: SKILL.md
.claude/skills/docker-verify/: SKILL.md
.claude/skills/fastapi/: SKILL.md
.claude/skills/org-service/: SKILL.md
.claude/skills/user-service/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/api/: dependencies.py  middleware.py
app/api/docs/: admin.py  predict.py
app/api/routes/: admin.py  predict.py
app/core/: config.py  logging.py  rate_limit.py  security.py  tracing.py
app/ml/: export_onnx.py
app/ml/datasets/: loader.py  transform.py
app/ml/inference/: predict.py
app/ml/models/: mnist_model.py
app/ml/train/: engine.py  evaluate.py  promote.py  train.py
app/ml/utils/: device.py
app/schemas/: prediction.py
app/services/: inference_service.py
configs/: default.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  pdb.yaml  secret.example.yaml  service.yaml
scripts/: colab_server.py  gpu_sanity_check.py  run_remote.py  train_dispatch.py
tests/: test_admin.py  test_config.py  test_device.py  test_engine.py  test_evaluate.py  test_export_onnx.py  test_inference_service.py  test_load_checkpoint.py  test_loader.py  test_logging.py  test_main.py  test_metrics.py  test_middleware.py  test_mnist.py  test_predict_auth.py  test_predict_batch.py  test_predict_concurrency.py  test_predict_route.py  test_promote.py  test_rate_limit.py  test_schemas.py  test_security.py  test_tracing.py  test_train.py  test_train_dispatch.py  test_transform.py
